# SOC

./: main.py
data/: AAPL_testing.csv  AAPL_training.csv
models/: nn_model_weights.weights.h5  scaler.pkl
results/: strategy_performance.csv
src/cpp/: CMakeLists.txt  bindings.cpp  data_types.h  macd_strategy.cpp  macd_strategy.h  rsi_strategy.cpp  rsi_strategy.h  supertrend_strategy.cpp  supertrend_strategy.h
src/python/: data_processor.py  model.py  train.py
